{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 102,
  "lineage": "aab07e13-eae2-6c50-61b8-ffd26be54f38",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myLab-IntGw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:246383970482:internet-gateway/igw-0697dd8ef1cc384f7",
            "id": "igw-0697dd8ef1cc384f7",
            "owner_id": "246383970482",
            "tags": {
              "Name": "myLab-InternetGw"
            },
            "tags_all": {
              "Name": "myLab-InternetGw"
            },
            "vpc_id": "vpc-051de93e3dbb43eaa"
          },
          "dependencies": [
            "aws_vpc.myLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myLab_RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:246383970482:route-table/rtb-04730aff2a1b169b5",
            "id": "rtb-04730aff2a1b169b5",
            "owner_id": "246383970482",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0697dd8ef1cc384f7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "myLab_RouteTable"
            },
            "tags_all": {
              "Name": "myLab_RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-051de93e3dbb43eaa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myLab-IntGw",
            "aws_vpc.myLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myLab-Assn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012b97034735a25a7",
            "route_table_id": "rtb-04730aff2a1b169b5",
            "subnet_id": "subnet-06e3eff9ef1309da9"
          },
          "dependencies": [
            "aws_internet_gateway.myLab-IntGw",
            "aws_route_table.myLab_RouteTable",
            "aws_subnet.myLab-Subnet1",
            "aws_vpc.myLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myLab_Sec_Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:246383970482:security-group/sg-0075c5294bb6ca510",
            "description": "To allow inbound and outbound traffic to myLab",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0075c5294bb6ca510",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "myLab Security Group",
            "name_prefix": "",
            "owner_id": "246383970482",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow traffic"
            },
            "tags_all": {
              "Name": "allow traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-051de93e3dbb43eaa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.myLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myLab-Subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:246383970482:subnet/subnet-06e3eff9ef1309da9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.20.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e3eff9ef1309da9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "246383970482",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "myLab-Subnet1"
            },
            "tags_all": {
              "Name": "myLab-Subnet1"
            },
            "vpc_id": "vpc-051de93e3dbb43eaa"
          },
          "dependencies": [
            "aws_vpc.myLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myLab-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:246383970482:vpc/vpc-051de93e3dbb43eaa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-03c91682b82bd8e5e",
            "default_route_table_id": "rtb-08afdf51c103fbb38",
            "default_security_group_id": "sg-066b8504d9fee9ec5",
            "dhcp_options_id": "dopt-06c05058f7d919b83",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-051de93e3dbb43eaa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08afdf51c103fbb38",
            "owner_id": "246383970482",
            "tags": {
              "Name": "myLab-VPC"
            },
            "tags_all": {
              "Name": "myLab-VPC"
            }
          }
        }
      ]
    }
  ]
}